[package]
name = "systemr"
version = "0.1.0"
edition = "2021"

[alias]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
caps = "0.5.5"
byteorder = "1.5.0"

[lib]
doctest = false

[[bin]]
name = "systemr"
test = false
